# llm-freelance-analyst

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/: main.py
src/core/: decorators.py  logger_setup.py  orchestrator.py
src/data/: csv_processor.py
src/llms/: llm_classifier.py  llm_translator.py
src/parsing/: query_parser.py
src/utils/: normalization.py
tests/: conftest.py  llm_test.py  queries_list.py  test_analyzer_e2e.py  transformers.py
