[tool.poetry]
name = "eora"
version = "0.1.0"
description = "An AI-powered CLI tool that analyzes freelancer earnings data using natural language queries."
authors = ["Dmitrii Valedinskii <dmvaled@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["eora", "ai", "freelancer", "natural", "language", "queries", "solution"]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
pydantic = "^2.5.0"
transformers = "^4.52.4"
torch = "^2.2.2"
poetry-core = ">=2.0.0,<3.0.0"
numpy = "<2.0"
safetensors = "^0.5.3"
sentencepiece = "^0.2.0"
sacremoses = "^0.1.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.12"
black = "^25.1.0"
pre-commit = "^4.2.0"
pandas-stubs = "^2.2.3.250308"
types-requests = "^2.32.0"
mypy = "^1.16.0"
accelerate = "^1.7.0"
tqdm = "^4.67.1"
types-colorama = "^0.4.15.20240311"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^4.1.0"
pytest-mock = "^3.14.0"

[tool.poetry.scripts]
run-test = "pytest"

[tool.ruff]
line-length = 88
target-version = "py312"
fix = true
unsafe-fixes = true

[tool.ruff.lint]
extend-select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
force-single-line = true
combine-as-imports = false
force-sort-within-sections = true
lines-after-imports = 2

[tool.black]
line-length = 88
target-version = ["py312"]
skip-string-normalization = false

[tool.pytest.ini_options]
addopts = "-ra -q"
python_files = "test_*.py"
python_functions = "test_*"
testpaths = ["tests"]

[tool.mypy]
config_file = "mypy.ini"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
